--- a/index.html
+++ b/index.html
@@ -58,13 +58,16 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due April 11th</p>
-</li>
-<li>
 <p><a href="assts/asst12.html">Assignment 12</a>: Due April 18th</p>
 </li>
 <li>
 <p>Lab April 15: <a href="studyguide6.html">Study Guide 6</a></p>
+</li>
+<li>
+<p>Lab April 22: Individual coding challenge (Code Jam 06)</p>
+</li>
+<li>
+<p><strong>NO QUIZ April 25</strong></p>
 </li>
 <li>
 <p>Final Exam: 9:30am - 12:30pm, Tuesday, May 6th, BYC 127</p>
@@ -462,7 +465,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="assts/asst12.html">Assignment 12</a>: Due April 18</p>
 </li>
 <li>
-<p>Lab April 15: Quiz 06 Practice</p>
+<p>Lab April 15: Worksheet practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -479,7 +482,10 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p><a href="assts/asst13.html">Assignment 13</a>: Due May 1, <strong>Hardcopy in class - no late work accepted</strong></p>
+<p>Lab April 22: Code Jam 06 - Individual programming challenge</p>
+</li>
+<li>
+<p><a href="assts/asst13.html">Assignment 13</a>: Due April 25, <strong>Hardcopy due in class April 24 - no late work accepted</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -493,13 +499,13 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>LAB IS CANCELED!</strong></p>
+<p><strong>NO LAB April 29</strong></p>
 </li>
 <li>
 <p>Lab April 29, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 <li>
-<p>In-Class: Practice Final</p>
+<p>In-Class: Practice Final and Review</p>
 </li>
 </ul>
 </div></div></td>
@@ -963,7 +969,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-12 14:21:56 -0400
+Last updated 2025-04-15 15:04:22 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
