--- a/schedule.html
+++ b/schedule.html
@@ -758,7 +758,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="assts/asst12.html">Assignment 12</a>: Due April 18</p>
 </li>
 <li>
-<p>Lab April 15: Quiz 06 Practice</p>
+<p>Lab April 15: Worksheet practice</p>
 </li>
 </ul>
 </div></div></td>
@@ -775,7 +775,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
-<p><a href="assts/asst13.html">Assignment 13</a>: Due May 1, <strong>Hardcopy in class - no late work accepted</strong></p>
+<p>Lab April 22: Code Jam 06 - Individual programming challenge</p>
+</li>
+<li>
+<p><a href="assts/asst13.html">Assignment 13</a>: Due April 25, <strong>Hardcopy due in class April 24 - no late work accepted</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -789,13 +792,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><strong>LAB IS CANCELED!</strong></p>
+<p><strong>NO LAB April 29</strong></p>
 </li>
 <li>
 <p>Lab April 29, <a href="studyguide-final">Final Study Guide</a>, <a href="studyguide6.html">Study Guide 6</a></p>
 </li>
 <li>
-<p>In-Class: Practice Final</p>
+<p>In-Class: Practice Final and Review</p>
 </li>
 </ul>
 </div></div></td>
@@ -805,7 +808,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-12 14:20:34 -0400
+Last updated 2025-04-15 15:06:01 -0400
 </div>
 </div>
 </body>
