--- a/assts/asst13.html
+++ b/assts/asst13.html
@@ -29,7 +29,10 @@
 <h2 id="_assignment_13_hold_on_to_your_memories">Assignment 13: Hold on to your memories</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Due Friday, April 25th, before midnight. <strong>Written portion is due April 24th - no late work accepted</strong></p>
+<p>Code Due Friday, April 25th, before midnight.</p>
+</div>
+<div class="paragraph">
+<p>Written work Due Thursday, April 24th, in class. <strong>Written portion is due April 24th - no late work accepted</strong></p>
 </div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
@@ -418,7 +421,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-05 12:12:20 -0400
+Last updated 2025-04-15 15:07:00 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
