--- a/index.html
+++ b/index.html
@@ -61,13 +61,16 @@
 <p><a href="assts/asst12.html">Assignment 12</a>: Due April 18th</p>
 </li>
 <li>
-<p>Lab April 15: <a href="studyguide6.html">Study Guide 6</a></p>
+<p><a href="assts/asst13.html">Assignment 13</a>: Due April 25th <strong>Written portion dur April 24</strong></p>
 </li>
 <li>
 <p>Lab April 22: Individual coding challenge (Code Jam 06)</p>
 </li>
 <li>
 <p><strong>NO QUIZ April 25</strong></p>
+</li>
+<li>
+<p><strong>NO LAB/Office Hours April 29</strong></p>
 </li>
 <li>
 <p>Final Exam: 9:30am - 12:30pm, Tuesday, May 6th, BYC 127</p>
@@ -969,7 +972,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-04-15 15:04:22 -0400
+Last updated 2025-04-18 14:24:54 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
