--- a/latePolicy.html
+++ b/latePolicy.html
@@ -443,31 +443,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_late_policy">Late Policy</h3>
 <div class="paragraph">
-<p>Because practice is so important for learning skills, we will do frequent
-exercises, assignments, and quizzes throughout the term.</p>
-</div>
-<div class="paragraph">
-<p>The purpose of this work is to give you hands on experience with the topics
-from class. Most of this work will be due in lecture or labs. <strong>The
-weekly time commitment for this course is aimed to be approximately 10 hours per week,
-including lectures and labs.</strong></p>
-</div>
-<div class="paragraph">
-<p>Assignments will generally be due on Fridays. However, you may request up to <strong>one</strong> late
-day (until Saturday) if necessary. No submissions beyond Saturday will be accepted.
-This allows us time to grade assignments. And it helps prevent you from falling
-behind. Note that with weekly assignments, you can miss a week or two without losing
-much credit on a final grade.</p>
-</div>
-<div class="paragraph">
-<p>If you require an accommodation for exams and quizzes, this must be submitted
-to the instructor within the first two weeks or class.</p>
+<p>You may always request 1 late day for any assignment.</p>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-01-15 17:48:47 -0500
+Last updated 2025-08-31 15:56:43 -0400
 </div>
 </div>
 </body>
