--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ and STL will be introduced at the end of the course.</p>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Lab</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Park 231</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Park 230</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Tuesdays 2:40 PM - 4:00 PM</p></td>
 </tr>
 <tr>
@@ -710,8 +710,8 @@ for information about Bryn Mawr&#8217;s Honor Code.</a>. Midterms and the final 
 closed book. Lab coding challenges will be open-book and closed-internet.
 Thus, you cannot use VS Code, internet browsers, and other programming aids.
 However, you can use the text book, <em>Dive into Systems</em>, the Linux Programming
-Manual (available with <code>man</code>), and your class notes. You may use any resources
-you wish for assignments.</p>
+Manual (available with <code>man</code>), and your class notes.  You may work with others and
+with online materials for assignments, but you will be expected to explain and reproduce your submitted assignment on your own.</p>
 </div>
 </div>
 </div>
@@ -758,7 +758,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-09-01 15:00:19 -0400
+Last updated 2025-09-01 15:38:16 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
