--- a/integrity.html
+++ b/integrity.html
@@ -451,15 +451,15 @@ for information about Bryn Mawr&#8217;s Honor Code.</a>. Midterms and the final 
 closed book. Lab coding challenges will be open-book and closed-internet.
 Thus, you cannot use VS Code, internet browsers, and other programming aids.
 However, you can use the text book, <em>Dive into Systems</em>, the Linux Programming
-Manual (available with <code>man</code>), and your class notes. You may use any resources
-you wish for assignments.</p>
+Manual (available with <code>man</code>), and your class notes.  You may work with others and
+with online materials for assignments, but you will be expected to explain and reproduce your submitted assignment on your own.</p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-08-31 16:25:18 -0400
+Last updated 2025-09-01 15:38:36 -0400
 </div>
 </div>
 </body>
