--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
+<li>
+<p><a href="lectures/Lecture-Week01-Sept2-Intro.pdf">Lecture - Sept 2</a></p>
+</li>
+<li>
+<p><a href="lectures/Lecture-Week01-Sept4-C.pdf">Lecture - Sept 4</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
