--- a/schedule.html
+++ b/schedule.html
@@ -486,6 +486,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
+<li>
+<p><a href="lectures/Lecture-Week01-Sept2-Intro.pdf">Lecture - Sept 2</a></p>
+</li>
+<li>
+<p><a href="lectures/Lecture-Week01-Sept4-C.pdf">Lecture - Sept 4</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -835,7 +841,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-08-31 17:45:01 -0400
+Last updated 2025-09-04 14:30:45 -0400
 </div>
 </div>
 </body>
